--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="menu">
+        <button id="fileOpen">File -> Open</button>
+        <input type="file" id="fileInput" accept=".pnml" style="display: none;">
+    </div>
     <div id="cy"></div>
 </body>
 </html>
