a button to go back to default mode

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     </div>
     <div id="editor" class="tab-content" style="display:none;">
         <div id="palette">
+            <button id="selectMove" title="Select/Move Tool">🖐️</button>
             <button id="addPlace" title="Add Place">🔵</button>
             <button id="addTransition" title="Add Transition">⬛</button>
             <button id="addArc" title="Add Arc">➡️</button>
