--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             <button id="addTransition" title="Add Transition">⬛</button>
             <button id="addArc" title="Add Arc">➡️</button>
             <button id="editText" title="Edit Text">abc...</button>
+			<button id="delete" title="Delete Tool">❌</button>
         </div>
         <div id="editor-cy"></div>
     </div>
