simulation + a trace now works pretty well

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,18 @@
         </div>
         <div id="editor-cy"></div>
     </div>
-    <div id="simulation" class="tab-content" style="display:none;">
-        <div id="simulation-menu">
-            <button id="reset" title="Reset Simulation">🔄</button>
-        </div>
-        <div id="simulation-cy"></div>
-    </div>
+	<div id="simulation" class="tab-content" style="display:none;">
+	    <div id="simulation-controls">
+	        <button id="reset" title="Reset Simulation">🔄 Reset</button>
+	        <div id="enabled-transitions" title="Enabled Transitions"></div>
+	        <textarea id="current-state" title="Current State" readonly></textarea>
+	        <div id="trace" title="Trace"></div>
+	    </div>
+	    <div id="simulation-cy-container">
+	        <div id="simulation-cy"></div>
+	    </div>
+	</div>
+
     <script>
         function openTab(tabName) {
             const tabs = document.getElementsByClassName('tab-content');
