export to pnml feature operational

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         <div id="viewer-menu">
             <button id="fileOpen">File -> Open</button>
             <input type="file" id="fileInput" accept=".pnml" style="display: none;">
+            <button id="fileExport">File -> Export</button>
         </div>
         <div id="viewer-cy"></div>
     </div>
