WIP : state graph view

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,15 @@
             </div>
             <div id="trace" title="Trace">Trace:</div>
         </div>
-        <div id="simulation-cy-container">
-            <div id="simulation-cy"></div>
+        <div id="simulation-visualization-container">
+            <div id="simulation-cy-container">
+                <div id="simulation-cy"></div>
+            </div>
+            <div id="state-graph-cy-container">
+                <div id="state-graph-cy"></div>
+            </div>
         </div>
     </div>
+
 </body>
 </html>
