--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
             <button id="fileOpen">File -> Open</button>
             <input type="file" id="fileInput" accept=".pnml" style="display: none;">
             <button id="fileExport">File -> Export</button>
+            <select id="exampleSelect">
+                <option value="">Select Example</option>
+            </select>
         </div>
         <div id="viewer-cy"></div>
     </div>
