a results div with parse of output

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,8 @@
         </div>
         
         <div id="output-wrapper" title="Output">
+            <h3>Results</h3>
+            <div id="results"></div>
             <h3>Standard Output (stdout)</h3>
             <textarea id="stdout" readonly></textarea>
             <h3>Error Output (stderr)</h3>
