syntax help button

--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,10 @@
                 <input type="number" id="timeout" value="100">
             </div>
             <div class="control-line">
-                <label for="formula-editor">Formula:</label>
+              <div class="vertical-container">
+                      <label for="formula-editor">Formula:</label>
+                      <button id="helpButton">Syntax Help</button>
+                  </div>
                 <div id="formula-editor" class="formula-editor"></div>
                 <button id="run-analysis" title="Run" class="run-button">Run</button>
             </div>
